--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Blood on the Throne</title>
+  <title>دماء على العرش</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Open+Sans&display=swap');
     * {
       box-sizing: border-box;
     }
     body {
       margin: 0;
-      background: #0f0f0f url('https://i.ibb.co/YRK9NzG/dark-blood.jpg') no-repeat center center fixed;
-      background-size: cover;
-      font-family: 'Open Sans', sans-serif;
+      background: #000000;
+      font-family: 'Cairo', 'Open Sans', sans-serif;
       color: #eee;
       display: flex;
       flex-direction: column;
@@ -24,14 +23,14 @@
       text-align: center;
     }
     .container {
-      background: rgba(15, 15, 15, 0.85);
+      background: rgba(15, 15, 15, 0.95);
       max-width: 600px;
       border-radius: 16px;
       padding: 30px 40px;
       box-shadow: 0 0 30px #b30000;
     }
     h1 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Cairo', serif;
       font-size: 3rem;
       margin-bottom: 0.3em;
       color: #ff1a1a;
@@ -46,9 +45,9 @@
     blockquote {
       font-style: italic;
       color: #f44336;
-      border-left: 4px solid #ff1a1a;
+      border-right: 4px solid #ff1a1a;
       margin: 1.5em 0;
-      padding-left: 1em;
+      padding-right: 1em;
       font-size: 1rem;
       line-height: 1.4;
     }
@@ -85,23 +84,23 @@
   </style>
 </head>
 <body>
-  <div class="container" role="main" aria-label="Blood on the Throne Book Download Section">
-    <h1>Blood on the Throne</h1>
+  <div class="container" role="main" aria-label="قسم تحميل رواية دماء على العرش">
+    <h1>دماء على العرش</h1>
     <p class="description">
-      A dark mafia thriller novel.<br/>
-      Dive into a world of power, betrayal, and deadly passion.<br/>
-      Ten chapters of intense emotions and ruthless control.
+      رواية إثارة وجريمة مظلمة.<br/>
+      غص في عالم القوة والخيانة والعاطفة القاتلة.<br/>
+      عشرة فصول من المشاعر المكبوتة والسيطرة القاسية.
     </p>
     <blockquote>
-      "Love is not mercy.<br/>
-      It is a law written in blood."
+      "الحب ليس رحمة.<br/>
+      إنه قانون مكتوب بالدم."
     </blockquote>
-    <a class="download-btn" href="https://drive.google.com/uc?export=download&id=19zy26QoTeXfNR9clT6MpAtRiMrqa9Jtc" target="_blank" rel="noopener noreferrer" aria-label="Download Blood on the Throne PDF">
-      🔥 Download the Book PDF
+    <a class="download-btn" href="https://drive.google.com/uc?export=download&id=19zy26QoTeXfNR9clT6MpAtRiMrqa9Jtc" target="_blank" rel="noopener noreferrer" aria-label="تحميل رواية دماء على العرش PDF">
+      🔥 تحميل الرواية PDF
     </a>
   </div>
   <footer>
-    © 2025 Blood on the Throne – All Rights Reserved
+    © 2025 دماء على العرش – كل الحقوق محفوظة
   </footer>
 </body>
 </html>
