--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>دماء على العرش</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Open+Sans&display=swap');
+
     * {
       box-sizing: border-box;
     }
     body {
       margin: 0;
-      background: #000000;
+      background: linear-gradient(180deg, #000000 0%, #330000 80%);
       font-family: 'Cairo', 'Open Sans', sans-serif;
       color: #eee;
       display: flex;
@@ -21,27 +22,116 @@
       justify-content: center;
       padding: 20px;
       text-align: center;
+      position: relative;
+      overflow-x: hidden;
     }
+
+    /* تأثير الدم المتساقط ثابت */
+    .blood-drips {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 150px;
+      pointer-events: none;
+      background:
+        radial-gradient(circle at 10% 20%, #8B0000 10px, transparent 11px),
+        radial-gradient(circle at 25% 50%, #B22222 15px, transparent 16px),
+        radial-gradient(circle at 40% 30%, #8B0000 12px, transparent 13px),
+        radial-gradient(circle at 55% 60%, #B22222 10px, transparent 11px),
+        radial-gradient(circle at 70% 25%, #8B0000 14px, transparent 15px),
+        radial-gradient(circle at 85% 45%, #B22222 11px, transparent 12px);
+      background-repeat: no-repeat;
+      background-size: 30px 60px;
+      background-position:
+        10% 0,
+        25% 0,
+        40% 0,
+        55% 0,
+        70% 0,
+        85% 0;
+      z-index: 15;
+    }
+
+    /* تأثير دخان خفيف خلف المحتوى */
+    .smoke-effect {
+      pointer-events: none;
+      position: fixed;
+      top: 100px;
+      left: 0;
+      width: 100%;
+      height: 300px;
+      background: radial-gradient(circle at center, rgba(51,0,0,0.4) 0%, transparent 80%);
+      z-index: 5;
+      filter: blur(20px);
+    }
+
+    /* بقع دم متفرقة ثابتة */
+    .blood-splatters {
+      pointer-events: none;
+      position: fixed;
+      top: 50px;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background:
+        url('https://i.ibb.co/5xqXW7W/blood-splatter1.png') 10% 30% no-repeat,
+        url('https://i.ibb.co/yfh2Qbt/blood-splatter2.png') 60% 70% no-repeat,
+        url('https://i.ibb.co/zRr3Jf9/blood-splatter3.png') 80% 20% no-repeat;
+      background-size: 80px 80px, 100px 100px, 70px 70px;
+      z-index: 10;
+    }
+
     .container {
       background: rgba(15, 15, 15, 0.95);
       max-width: 600px;
       border-radius: 16px;
       padding: 30px 40px;
       box-shadow: 0 0 30px #b30000;
+      position: relative;
+      z-index: 20;
+      border: 2px solid #440000;
     }
+
     h1 {
       font-family: 'Cairo', serif;
       font-size: 3rem;
       margin-bottom: 0.3em;
       color: #ff1a1a;
-      text-shadow: 0 0 10px #ff1a1a;
+      /* تأثير توهج دموي */
+      text-shadow:
+        0 0 5px #ff0000,
+        0 0 10px #ff0000,
+        0 0 20px #b30000,
+        0 0 30px #660000;
+      position: relative;
     }
+
+    /* تأثير كسر زجاج خفيف على العنوان */
+    h1::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 90%;
+      height: 100%;
+      background:
+        url('https://i.ibb.co/TT0qPcZ/cracked-glass-overlay.png') no-repeat center center;
+      background-size: cover;
+      opacity: 0.1;
+      transform: translateX(-50%);
+      pointer-events: none;
+      mix-blend-mode: screen;
+      z-index: 1;
+    }
+
     p.description {
       font-size: 1.1rem;
       line-height: 1.6;
       margin-bottom: 2em;
       color: #ccc;
     }
+
     blockquote {
       font-style: italic;
       color: #f44336;
@@ -50,7 +140,9 @@
       padding-right: 1em;
       font-size: 1rem;
       line-height: 1.4;
+      text-shadow: 0 0 5px #b30000;
     }
+
     a.download-btn {
       background: #ff1a1a;
       color: white;
@@ -59,20 +151,32 @@
       font-weight: 700;
       text-decoration: none;
       font-size: 1.2rem;
-      box-shadow: 0 0 15px #ff1a1a;
+      box-shadow:
+        0 0 15px #ff1a1a,
+        inset 0 0 10px #ff4d4d;
       transition: background-color 0.3s ease, transform 0.3s ease;
       display: inline-block;
       margin-top: 10px;
+      position: relative;
+      z-index: 25;
     }
+
     a.download-btn:hover {
       background: #cc0000;
       transform: scale(1.05);
+      box-shadow:
+        0 0 25px #cc0000,
+        inset 0 0 15px #ff1a1a;
     }
+
     footer {
       margin-top: 40px;
       font-size: 0.9rem;
       opacity: 0.5;
+      position: relative;
+      z-index: 20;
     }
+
     @media(max-width: 640px) {
       h1 {
         font-size: 2.5rem;
@@ -84,6 +188,10 @@
   </style>
 </head>
 <body>
+  <div class="blood-drips"></div>
+  <div class="smoke-effect"></div>
+  <div class="blood-splatters"></div>
+
   <div class="container" role="main" aria-label="قسم تحميل رواية دماء على العرش">
     <h1>دماء على العرش</h1>
     <p class="description">
