--- a/index.html
+++ b/index.html
@@ -26,23 +26,15 @@
       overflow-x: hidden;
     }
 
-    /* تأثير الدم المتساقط ثابت */
+    /* دم يتساقط من الأعلى بطول أقل */
     .blood-drips {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      height: 150px;
+      height: 100px; /* أقل من السابق */
       pointer-events: none;
-      background:
-        radial-gradient(circle at 10% 20%, #8B0000 10px, transparent 11px),
-        radial-gradient(circle at 25% 50%, #B22222 15px, transparent 16px),
-        radial-gradient(circle at 40% 30%, #8B0000 12px, transparent 13px),
-        radial-gradient(circle at 55% 60%, #B22222 10px, transparent 11px),
-        radial-gradient(circle at 70% 25%, #8B0000 14px, transparent 15px),
-        radial-gradient(circle at 85% 45%, #B22222 11px, transparent 12px);
       background-repeat: no-repeat;
-      background-size: 30px 60px;
       background-position:
         10% 0,
         25% 0,
@@ -50,6 +42,14 @@
         55% 0,
         70% 0,
         85% 0;
+      background-size: 8px 100px, 6px 85px, 10px 90px, 7px 95px, 5px 80px, 9px 92px;
+      background-image:
+        linear-gradient(to bottom, #8B0000 0%, #330000 100%),
+        linear-gradient(to bottom, #B22222 0%, #4B0000 100%),
+        linear-gradient(to bottom, #8B0000 0%, #2B0000 100%),
+        linear-gradient(to bottom, #B22222 0%, #3B0000 100%),
+        linear-gradient(to bottom, #8B0000 0%, #250000 100%),
+        linear-gradient(to bottom, #B22222 0%, #420000 100%);
       z-index: 15;
     }
 
@@ -64,22 +64,6 @@
       background: radial-gradient(circle at center, rgba(51,0,0,0.4) 0%, transparent 80%);
       z-index: 5;
       filter: blur(20px);
-    }
-
-    /* بقع دم متفرقة ثابتة */
-    .blood-splatters {
-      pointer-events: none;
-      position: fixed;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      background:
-        url('https://i.ibb.co/5xqXW7W/blood-splatter1.png') 10% 30% no-repeat,
-        url('https://i.ibb.co/yfh2Qbt/blood-splatter2.png') 60% 70% no-repeat,
-        url('https://i.ibb.co/zRr3Jf9/blood-splatter3.png') 80% 20% no-repeat;
-      background-size: 80px 80px, 100px 100px, 70px 70px;
-      z-index: 10;
     }
 
     .container {
@@ -105,24 +89,6 @@
         0 0 20px #b30000,
         0 0 30px #660000;
       position: relative;
-    }
-
-    /* تأثير كسر زجاج خفيف على العنوان */
-    h1::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 50%;
-      width: 90%;
-      height: 100%;
-      background:
-        url('https://i.ibb.co/TT0qPcZ/cracked-glass-overlay.png') no-repeat center center;
-      background-size: cover;
-      opacity: 0.1;
-      transform: translateX(-50%);
-      pointer-events: none;
-      mix-blend-mode: screen;
-      z-index: 1;
     }
 
     p.description {
@@ -190,7 +156,6 @@
 <body>
   <div class="blood-drips"></div>
   <div class="smoke-effect"></div>
-  <div class="blood-splatters"></div>
 
   <div class="container" role="main" aria-label="قسم تحميل رواية دماء على العرش">
     <h1>دماء على العرش</h1>
