--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       "الحب ليس رحمة.<br/>
       إنه قانون مكتوب بالدم."
     </blockquote>
-    <a class="download-btn" href="https://drive.google.com/uc?export=download&id=19zy26QoTeXfNR9clT6MpAtRiMrqa9Jtc" target="_blank" rel="noopener noreferrer" aria-label="تحميل رواية دماء على العرش PDF">
+    <a class="download-btn" href="https://drive.google.com/file/d/19zy26QoTeXfNR9clT6MpAtRiMrqa9Jtc/view?usp=drive_link" target="_blank" rel="noopener noreferrer" aria-label="تحميل رواية دماء على العرش PDF">
       🔥 تحميل الرواية PDF
     </a>
   </div>
